# unified-social-api

./: .gitignore  CLAUDE.md  README.md
backend/: .env.example  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 08a9ab68fb45_add_social_accounts.py  0bbe65468e81_make_expires_at_timezone_aware.py  1501c11c62ba_fix_user_model.py  316520745890_add_webhook_url_coulmn_to_social_account.py  32bdcc1245f3_add_index_to_hashed_api_key_field_for_.py  3963d4f0adda_fix_api_key_prefix_length.py  47ba39c3990e_fix_postgresstatusenum.py  53a303e3874c_updated_models.py  6793f672c067_add_auth_provider_nullable_password.py  7270d4e34f87_add_profile_metadata.py  865e57b77cfa_fix_field_typing_for_webhook_url.py  8ff7f3d2d26b_add_api_keys_table.py  9afd5263314b_add_is_active_field_to_social_account_.py  9ceb0dfd82ef_add_platform_instance_field_to_social_.py  a40ffc999e7e_fix_user_model_and_post_model.py  a84fe190627b_added_user_relationship_field_to_post_.py  ac5856fa035f_add_posts_tables.py  c7622f55992c_add_api_keys_table.py  daf42f091b4b_add_account_profile_fields.py  fa85a0e49b81_init_users_and_posts.py
backend/src/: main.py
backend/src/api/: dependencies.py  v1.py
backend/src/api_keys/: models.py  repository.py  router.py  schemas.py
backend/src/auth/: router.py  schemas.py
backend/src/common/: models.py
backend/src/core/: base.py  config.py  database.py  redis.py  security.py
backend/src/posts/: models.py  repository.py  router.py  schemas.py
backend/src/social_accounts/: models.py  repository.py  router.py  schemas.py  (+2 more)
backend/tests/: conftest.py
(+120 files in other folders)
